# random-tech-tweet-generator-backend

./: README.md  db.json  package.json  pyproject.toml  server.js
.github/workflows/: insert-new-tweets-in-db.yml  update-existing-tweets-in-db.yml  update-tweet-db.yml
assets/: Example.drawio  Flow_Digram.drawio  Rapid_API.json  alexxubyte.json  bascodes.json  bbelderbos.json  config.yml  mathsppblog.json  raymondh.json  testdrivenio.json  watchlist.yml
db/: tweets.db  tweets.json
src/random_tech_tweet_generator_backend/: config_parser.py  converter.py  database.py  db_to_json.py  scrapper.py  update_database.py
tests/: test_python_tips_reader.py
